--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<script type="text/javascript" src="cordova.js"></script>
 
 	<!-- Sugarizer classes -->
-	<link href="css/styles.css" rel="stylesheet" type="text/css" />
+	<link href="css/styles.css?v=999" rel="stylesheet" type="text/css" />
 	<script src="js/constant.js" type="text/javascript"></script>
 	<script src="js/icon.js" type="text/javascript"></script>
 	<script src="js/iconbutton.js" type="text/javascript"></script>
